<resources>
    <string name="app_name">Local Service Finder</string>

    <string name="Prof_Doctor">Doctor</string>
    <string name="Prof_Lawyer">Lawyer</string>
    <string name="Prof_Tutor">Tutor</string>
    <string name="Prof_Travel_Agent">Travel Agent</string>
    <string name="Prof_IT_Solutions">IT Solutions</string>
    <string name="Prof_Pharmacy">Pharmacy</string>
    <string name="Prof_Hospital">Hospital</string>
    <string name="Prof_Pathology_Lab">Pathology Lab</string>
    <string name="Prof_Photography">Photography</string>
    <string name="Prof_Insurance_Agent">Insurance Agent</string>
    <string name="Prof_Vehicle_Rent">Vehicle Rent</string>
    <string name="Prof_Restaurant">Restaurant</string>
    <string name="Prof_Hotels">Hotels</string>
    <string name="Prof_Bar_Wine_Shop">Bar Wine Shops</string>
    <string name="Prof_Beauty_Products">Beauty Products</string>
    <string name="Prof_Jewellery">Jewellery</string>
    <string name="Prof_Grocery">Grocery</string>
    <string name="Prof_Clothing">Clothing</string>
    <string name="Prof_Electronics">Electronics</string>
    <string name="Prof_Hardware">Hardware</string>
    <string name="Prof_Showrooms">Showrooms</string>
    <string name="Prof_Housing">Housing</string>
    <string name="Prof_Property_Dealers">Property Dealers</string>
    <string name="Prof_Electrician">Electrician</string>
    <string name="Prof_Plumber">Plumber</string>
    <string name="Prof_Carpenter">Carpenter</string>
    <string name="Prof_Painter">Painter</string>
    <string name="Prof_Agriculture">Agriculture</string>
    <string name="Prof_Transports">Transports</string>
    <string name="Prof_Educational_Institute">Educational Institute</string>
    <string name="Prof_Consultancy_Firm">Consultancy Firm</string>


    <string name="Prof_Others">Others</string>


    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client_home">ClientHome</string>
    <string name="title_activity_provider_home">ProviderHome</string>


    <string name="User_Guide"><u><b>Read User Guide</b></u></string>
    <string name="In_the_app"> <b>        It is seem be there is a lots of services we required in our daily life.
        Sometimes for many requirement we don’t able to find a service provider at times and we get tensed ,
        by thinking where to find out a service man or any other kind of service provider in our nearest area.
        Taking example of let say for daily work a plumber or an electrician or a gardener, or for health a doctor
        or for tasty food a restaurant or for travelling a travel agency etc . There are a lots of services that we required.
        So if there is any medium through which we can get access to the contact information of the service provider then it may
        help reducing the time to find the service provider,  Not required to go outside to find , No need to ask any other to get
        information about them.	Also for the service provider they need not to advertise about their service all over the area.
        They simply registered themselves to the system and the system will help to find the client for their service.
        If any person or any community new are their services then it can be popular by this system within the area.
        It will also very beneficial for those service provider who are not able to advertise their service in a wide area.
        By this system it will also help them to popular their services and increase the reachability.
        So it will very helpful for both client and the service provider.  No need to take burden , no need to tensed and
        no need of wasting time for service or a client. </b>
    </string>
    <string name="why_it_is_helpful"> <b>
        We bring you some of the feature in the appliaction that may help to know the benefits of using this help.
        such as : \n
        1.  Client will get their service provider contact information just visiting the system on their mobile from home or
        their workplace. \n
        2.  Client do not need to go outside to find the service provider to their service or contact any other person to find
        or in search of the service provider. \n
        3.  It will very beneficial for those who are unable to advertise their job or service in the wide area. They do not need
        to advertise their posting advertise in the newspaper or on the street. \n
        4.  It will help all the service provider to reach the high popularity level and increase their reachability .\n
        5.  The client and the service provider directly interact on phone or mobile with their issues. \n
        6.  Client can check the list of all service provider within his or her area and compare the services of the service provider
        to get the better service.                  </b>

    </string>
    <string name="use_as_client">  <b> You want to use this appliation as a client, Just perform few step and you reach your desired
        need. As a client you can search for service provider so follow these simple step below : \n

        1. Just click in the client button (bottom left side of the application). \n
        2. After that click on the Register button if you are new to the app. \n
        3. After that fill up the required authentication form. You will be required to enter your email and password. \n
        4. After registration go to the Log in page and fill up the form and proceed by clicking Log in button. \n
        5. Now if your log in credential is correct than you can enter to the client home page.\n
        6. if your log in credential is not correct than you will get an error message.\n
        7. Now from the home page you can search for the provider accroding to their proffesion within a certain range directly.\n
        8. You can also make a custom search available in the manu . In custom search you can search for a service provider
        by city, district and proffesion.\n
        9. You can give us comment, compliment, suggetion in the feedback page.        </b></string>
    <string name="use_as_sp">  <b> You want to use this appliation as a Service Provider, Just perform few step and you reach your desired
        need. As a Service Provider you can update your persional and professional information and advertise youself and your profession so follow
        these simple step below : \n

         1. Just click in the Service Provider button ( bottom right side of the application).\n
        2. After that click on the Register button if you are new to the app. \n
        3. After that fill up the required authentication form. You will be required to enter your email and password.\n
        4. After registration go to the Log in page and fill up the form and proceed by clicking Log in button.\n
        5. Now if your log in credential is correct than you can enter to the Service Provider home page.\n
        6. if your log in credential is not correct than you will get an error message.\n
        7. Now from the home page you can update your profile with persional and professional information.\n
        8. You can update your profile if any wrong or outdated information is avaiable.\n
        9.  You can give us comment, compliment, suggetion in the feedback page. \n </b>


    </string>


    <string name="page1content">Welcome to Local service Finder, Your one stop destination for exploring neighbourhood
        in click of few buttons in your smartphone. We are happy to guide you to know your surrounding better. We are glad
        that you came here to try this app.
    </string>

    <string name="page2content">If you continue as client then you will be able to find address and contact information of
    all the services you may frequently need, may it be a medical personnel, a good restaurant, your shopping destinations,
    Hotels, Institutes, Home Solutions and Many More... available in your Surroundings. So give It a try and Know your surrounding
    better.
    </string>

    <string name="page3content">
        If you have any Bussiness, you can register as a Service Provider. We all want our Bussiness to grow. Nowadays, It is
        very important to advertise youself to online community. We understand your needs. So, thats why we bring to you this
        app. you can achieve more visibility to your potential customer without investing any money in the name of advertisement.
        So, register yourself today and make yourself visible to your online potential customer free of cost. TRY NOW.
    </string>

    <string name="terms_ref"><b><u>Read Terms and Condition Carefully</u></b></string>
    <string name="terms_string"><b><u>TERMS AND CONDITIONS</u></b></string>
    <string name="terms_condition">
        1. As you Know this app Displays your Contact Information and Address to its user. \n\n
        2. We only provide platform between you and your customer.\n\n
        3. Any Misuse of your phone number and Email address may occur from app user. \n\n
        4. By Accepting Terms and Condition, You are giving your consent to show your Information to app users.\n\n
        5. Developer of this app are not responsible for any misuse and spam on your mobile number and Email.
    </string>

    <string name="no_result"><b><u>Make Custom Search Instead</u></b></string>
</resources>
