<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.dev.r19.localservicefinder.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/LinHeader"
        android:background="@drawable/background2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textView23"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="You are in : "
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentCity"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView23"
            android:layout_centerHorizontal="true"
            android:text="TextView"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/SignOut"
            android:layout_marginTop="5dp"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_back4"
            android:text="Log Out"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LinHeader"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinMain">
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <GridLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:columnCount="2">


               <LinearLayout
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:orientation="vertical">
                   <ImageButton
                       android:id="@+id/Doctor"
                       android:layout_width="fill_parent"
                       android:layout_height="150dp"
                       android:src="@drawable/image_doctor"
                       android:scaleType="fitCenter"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Prof_Doctor"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:orientation="vertical">
                   <ImageButton
                       android:layout_width="fill_parent"
                       android:layout_height="150dp"
                       android:src="@drawable/image_lawyer"
                       android:scaleType="fitCenter"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Prof_Lawyer"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:orientation="vertical">
                   <ImageButton
                       android:layout_width="fill_parent"
                       android:layout_height="150dp"
                       android:src="@drawable/image_travel"
                       android:scaleType="fitCenter"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Prof_Travel_Agent"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:orientation="vertical">
                   <ImageButton
                       android:layout_width="fill_parent"
                       android:layout_height="150dp"
                       android:src="@drawable/image_tutor"
                       android:scaleType="fitCenter"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Prof_Tutor"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:orientation="vertical">
                   <ImageButton
                       android:layout_width="fill_parent"
                       android:layout_height="150dp"
                       android:src="@drawable/image_travel"
                       android:scaleType="fitCenter"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Prof_Travel_Agent"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_rowWeight="1"
                   android:layout_columnWeight="1"
                   android:orientation="vertical">
                   <ImageButton
                       android:layout_width="fill_parent"
                       android:layout_height="150dp"
                       android:src="@drawable/image_tutor"
                       android:scaleType="fitCenter"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Prof_Tutor"/>
               </LinearLayout>


           </GridLayout>
       </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/LinMain"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Prof_Tutor"/>
    </LinearLayout>

</RelativeLayout>
